--- a/Azure.Dsc/Azure.Dsc.Server/Azure.Dsc.Server.csproj
+++ b/Azure.Dsc/Azure.Dsc.Server/Azure.Dsc.Server.csproj
@@ -63,6 +63,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Spatial, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -80,9 +81,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="DscService\Import-DscModules.ps1" />
-    <None Include="DscService\New-DscPullServer.cmd" />
-    <None Include="DscService\New-DscPullServer.ps1" />
+    <None Include="DscService\New-DscPullServer.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
